--- a/index.html
+++ b/index.html
@@ -2,14 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>YYH Second-Hand Books</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YYH Second Hand Books</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to YYH Second-Hand Books</h1>
-        <p>Every book deserves a second chapter.</p>
-        <a href="products.html" class="button">Shop Now</a>
+        <a href="index.html"><img src="https://i.imgur.com/hHFU73F.png" alt="YYH Logo" class="logo"></a>
+        <h1>YYH Second Hand Books</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Shop</a>
+            <a href="sell.html">Sell to YYH</a>
+            <a href="buy.html">Buy</a>
+            <a href="faq.html">FAQ</a>
+            <a href="mailto:your-school-email@school.com">Contact</a>
+        </nav>
     </header>
+    <main>
+        <section>
+            <h2>Welcome to YYH Second Hand Books!</h2>
+            <p id="slogan">Every book deserves a second chapter.</p>
+            <p>Buy and sell second-hand books at school. Run by Daisy Yang and Yuhan Yang.</p>
+            <p>We are a student-run initiative at school to help you save money on textbooks while promoting sustainability. Browse our collection, sell your old books, or contact us for more info!</p>
+            <a href="products.html" class="faq-button">Shop Now</a>
+        </section>
+    </main>
+    <footer>
+        <p>Run by Daisy Yang and Yuhan Yang. Contact us via school email or Teams.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
