--- a/faq.html
+++ b/faq.html
@@ -2,11 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FAQ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FAQ - YYH Second Hand Books</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Frequently Asked Questions</h2>
-    <p><strong>How do I buy a book?</strong> Choose a book and follow the instructions.</p>
+    <header>
+        <a href="index.html"><img src="https://i.imgur.com/hHFU73F.png" alt="YYH Logo" class="logo"></a>
+        <h1>YYH Second Hand Books</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Shop</a>
+            <a href="sell.html">Sell to YYH</a>
+            <a href="buy.html">Buy</a>
+            <a href="faq.html">FAQ</a>
+            <a href="mailto:your-school-email@school.com">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Frequently Asked Questions</h2>
+
+            <h3 id="consignment">How to Sell Your Book?</h3>
+            <p>We operate on a consignment model. You submit your book details on the <a href="sell.html">Sell to YYH</a> page, and we'll arrange a campus pickup. Once your book sells, you'll receive payment via bank transfer within 5 business days. Unsold books can be returned to you upon request.</p>
+
+            <h3>How to Buy a Book?</h3>
+            <p>Go to the <a href="buy.html">Buy</a> page, fill out the form with your details, and select a book. After submitting, you'll need to pay via PayPal within 24 hours (include your Book ID in the payment note!). We'll then arrange a campus pickup.</p>
+
+            <h3>What Happens If I Don’t Pay Within 24 Hours?</h3>
+            <p>If payment isn't received within 24 hours, your order will be canceled, and the book will be available for others to purchase.</p>
+
+            <h3>Can I Return a Book?</h3>
+            <p>We accept returns within 7 days if the book is in the same condition as purchased. Email us to arrange a return and refund.</p>
+
+            <h3>Who Runs YYH Second Hand Books?</h3>
+            <p>We are Daisy Yang and Yuhan Yang, students at your school, running this initiative to promote sustainability and help you save money on textbooks!</p>
+        </section>
+    </main>
+    <footer>
+        <p>Run by Daisy Yang and Yuhan Yang. Contact us via school email or Teams.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
