--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - YYH Second Hand Books</title>
+    <title>FAQ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,21 +22,14 @@
     <main>
         <section>
             <h2>Frequently Asked Questions</h2>
-
+            <h3 id="buy-from-us">How to Buy a Book?</h3>
+            <p>Go to the Buy page, fill out the form with your details, and select a book. After submitting, pay via PayPal or CommBank as instructed. We'll prepare your book and place it at your chosen pickup point (Nevil Wing 1st Floor Reception or NLC 1st Floor Reception).</p>
             <h3 id="consignment">How to Sell Your Book?</h3>
-            <p>We operate on a consignment model. You submit your book details on the <a href="sell.html">Sell to YYH</a> page, and we'll arrange a campus pickup. Once your book sells, you'll receive payment via bank transfer within 5 business days. Unsold books can be returned to you upon request.</p>
-
-            <h3>How to Buy a Book?</h3>
-            <p>Go to the <a href="buy.html">Buy</a> page, fill out the form with your details, and select a book. After submitting, you'll need to pay via PayPal within 24 hours (include your Book ID in the payment note!). We'll then arrange a campus pickup.</p>
-
-            <h3>What Happens If I Don’t Pay Within 24 Hours?</h3>
-            <p>If payment isn't received within 24 hours, your order will be canceled, and the book will be available for others to purchase.</p>
-
-            <h3>Can I Return a Book?</h3>
-            <p>We accept returns within 7 days if the book is in the same condition as purchased. Email us to arrange a return and refund.</p>
-
-            <h3>Who Runs YYH Second Hand Books?</h3>
-            <p>We are Daisy Yang and Yuhan Yang, students at your school, running this initiative to promote sustainability and help you save money on textbooks!</p>
+            <p>We operate on a consignment basis. Fill out the form on the Sell page with your book details and bank account info. We'll arrange a pickup on campus, assess the book's condition, and list it for sale. Once sold, you'll receive payment via bank transfer (you keep 70%, we take 30% commission).</p>
+            <h3>Where Are the Pickup Points?</h3>
+            <p>Books can be picked up at Nevil Wing 1st Floor Reception or NLC 1st Floor Reception. Choose your preferred location when you order.</p>
+            <h3>How Can I Contact YYH?</h3>
+            <p>Email us at your-school-email@school.com or message us on Teams. We're here to help!</p>
         </section>
     </main>
     <footer>
