--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <section>
             <h2>Welcome to YYH Second Hand Books!</h2>
             <p id="slogan">Every book deserves a second chapter.</p>
-            <p>Buy and sell second-hand books at school. Run by Daisy Yang and Yuhan Yang.</p>
-            <p>We are a student-run initiative at school to help you save money on textbooks while promoting sustainability. Browse our collection, sell your old books, or contact us for more info!</p>
+            <p>Buy and sell second-hand books at school. Run by Yuhan Yang, Avini Hedge, Aries Luo.</p>
+            <p>We are a student-run, non-profit initiative at school to help you save money on textbooks while promoting sustainability. Browse our collection, sell your old books, or contact us for more info!</p>
             <a href="products.html" class="faq-button">Shop Now</a>
         </section>
     </main>
     <footer>
-        <p>Run by Daisy Yang and Yuhan Yang. Contact us via school email or Teams.</p>
+        <p>Run by Yuhan Yang, Avini Hedge, Aries Luo. Contact us via school email or Teams.</p>
     </footer>
     <script src="script.js"></script>
 </body>
