--- a/about.html
+++ b/about.html
@@ -1,51 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-    }
-    h1 {
-      color: #2a5d34;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - YYH Second Hand Books</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1>About Us</h1>
+    <header>
+        <a href="index.html"><img src="https://i.imgur.com/hHFU73F.png" alt="YYH Logo" class="logo"></a>
+        <h1>YYH Second Hand Books</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Shop</a>
+            <a href="sell.html">Sell to YYH</a>
+            <a href="buy.html">Buy</a>
+            <a href="faq.html">FAQ</a>
+            <a href="about.html">About Us</a>
+            <a href="sustainability.html">Sustainability</a>
+            <a href="mailto:your-school-email@school.com">Contact</a>
+        </nav>
+    </header>
 
-  <p>
-    We are a <strong>100% student-run non-profit organisation</strong> at Methodist Ladies’ College.
-    Our team members are <strong>Yuhan Yang (Year 10), Aries Luo (Year 10), and Avni Hedge (Year 10)</strong>.
-  </p>
+    <main>
+        <section>
+            <h2>About Us</h2>
+            <p>
+                We are a <strong>100% student-run non-profit organisation</strong> at Methodist Ladies’ College.
+                Our team members are <strong>Yuhan Yang (Year 10), Aries Luo (Year 10), and Avni Hedge (Year 10)</strong>.
+            </p>
 
-  <p>
-    Despite our busy academic life, we personally code the site, evaluate product prices,
-    and handle product transfers — all to contribute to our planet’s wellbeing. We are committed
-    to environmental protection, and all trades are conducted in an environmentally-friendly way.
-    <strong>All profits are donated to environmental charities</strong> to help protect our Earth.
-  </p>
+            <p>
+                Despite our busy academic life, we personally code the site, evaluate product prices,
+                and handle product transfers — all to contribute to our planet’s wellbeing. We are committed
+                to environmental protection, and all trades are conducted in an environmentally-friendly way.
+                <strong>All profits are donated to environmental charities</strong> to help protect our Earth.
+            </p>
 
-  <p>
-    Our trading method requires <strong>no trucks and no flights</strong> — only our own hands
-    and legs to complete product hand-overs. On campus, we provide a platform for students to trade
-    products, and we only charge <strong>10% service fee</strong>. Delivery is fast and produces
-    <strong>0 pollution</strong>.
-  </p>
+            <p>
+                Our trading method requires <strong>no trucks and no flights</strong> — only our own hands
+                and legs to complete product hand-overs. On campus, we provide a platform for students to trade
+                products, and we only charge <strong>10% service fee</strong>. Delivery is fast and produces
+                <strong>0 pollution</strong>.
+            </p>
 
-  <p>
-    For second-hand books, we strongly support re-use, so our service fee remains only 10% —
-    <strong>much lower and faster than many other second-hand book platforms</strong>.
-  </p>
+            <p>
+                For second-hand books, we strongly support re-use, so our service fee remains only 10% —
+                <strong>much lower and faster than many other second-hand book platforms</strong>.
+            </p>
 
-  <p>
-    If you have any further questions, feel free to message any of us:
-    <strong>Yuhan Yang (Year 10), Aries Luo (Year 10), Avni Hedge (Year 10)</strong>.
-  </p>
+            <p>
+                If you have any further questions, feel free to message any of us:
+                <strong>Yuhan Yang (Year 10), Aries Luo (Year 10), Avni Hedge (Year 10)</strong>.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Run by Yuhan Yang, Avni Hedge, Aries Luo. Contact us via school email or Teams.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
