Update sustainability page with new header and content

--- a/sustainability.html
+++ b/sustainability.html
@@ -1,66 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sustainability Tips</title>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-    }
-    h1 {
-      color: #2a5d34;
-    }
-    h2 {
-      margin-top: 28px;
-      color: #3a6b44;
-    }
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sustainability Tips - YYH Second Hand Books</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1>Sustainability Tips</h1>
+    <header>
+        <a href="index.html"><img src="https://i.imgur.com/hHFU73F.png" alt="YYH Logo" class="logo"></a>
+        <h1>YYH Second Hand Books</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Shop</a>
+            <a href="sell.html">Sell to YYH</a>
+            <a href="buy.html">Buy</a>
+            <a href="faq.html">FAQ</a>
+            <a href="about.html">About Us</a>
+            <a href="sustainability.html">Sustainability</a>
+            <a href="mailto:your-school-email@school.com">Contact</a>
+        </nav>
+    </header>
 
-  <h2>🌍 Global Situation</h2>
-  <ul>
-    <li>
-      The publishing industry in the U.S. emits over <strong>40 million tons of CO₂</strong>
-      and cuts down about <strong>32 million trees a year</strong>.
-    </li>
-    <li>
-      Every year, about <strong>320 million books</strong> end up in landfills rather than being reused.
-    </li>
-    <li>
-      Reusing or buying second-hand books drastically lowers ecological footprint.
-    </li>
-  </ul>
+    <main>
+        <section>
+            <h2>Sustainability Tips</h2>
 
-  <h2>✅ Why Second-Hand Books Help</h2>
-  <ul>
-    <li>Reduces demand for new books → fewer trees cut down</li>
-    <li>Extends the lifespan of existing books</li>
-    <li>Reduces landfill waste</li>
-    <li>Less transportation → lower CO₂ emission</li>
-  </ul>
+            <h3>🌍 The Global Situation</h3>
+            <ul>
+                <li>The publishing industry in the U.S. emits over <strong>40 million tons of CO₂</strong> and cuts down <strong>32 million trees</strong> per year.</li>
+                <li>About <strong>320 million books</strong> are discarded annually instead of being reused.</li>
+                <li>Reusing or trading second-hand books drastically reduces ecological impact.</li>
+            </ul>
 
-  <h2>💡 Easy Sustainability Tips</h2>
-  <ul>
-    <li>Buy second-hand books instead of new ones</li>
-    <li>Trade or donate books you no longer need</li>
-    <li>Walk / bike to collect items — skip large-emission transport</li>
-    <li>Use reusable water bottles / cups</li>
-    <li>Turn off electronics when not in use</li>
-    <li>Use digital receipts instead of printing</li>
-    <li>Encourage friends to adopt sustainable habits</li>
-  </ul>
+            <h3>✅ Why Second-Hand Books Help</h3>
+            <ul>
+                <li>Reduces demand for new books → fewer trees cut down</li>
+                <li>Extends the lifespan of existing books</li>
+                <li>Reduces landfill waste</li>
+                <li>Less transportation → lower CO₂ emission</li>
+            </ul>
 
-  <p>Let’s take action together and protect our beautiful planet 🌱</p>
+            <h3>💡 Simple Sustainability Tips</h3>
+            <ul>
+                <li>Buy second-hand books instead of new ones</li>
+                <li>Trade or donate books you no longer need</li>
+                <li>Walk / bike to collect items — skip large-emission transport</li>
+                <li>Use reusable water bottles and cups</li>
+                <li>Turn off electronics when not in use</li>
+                <li>Use digital receipts instead of printing</li>
+                <li>Educate friends about sustainable habits</li>
+            </ul>
+
+            <p>Let’s take action together and protect our planet 🌱</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Run by Yuhan Yang, Avni Hedge, Aries Luo. Contact us via school email or Teams.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
